--- a/AirlinesReservationSystem/Views/Home/Contact.cshtml
+++ b/AirlinesReservationSystem/Views/Home/Contact.cshtml
@@ -15,8 +15,52 @@
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
 
-<h3>@ViewBag.TheMessage</h3>
-<form method="post">
-    <textarea name="message"></textarea>
-    <input type="submit" value="send" />
-</form>
+<div id="formSection">
+    <h3>@ViewBag.TheMessage</h3>
+    <form method="post" id="contactForm">
+        <textarea name="message" id="message" maxlength="150" data-bind="value:message,valueUpdate:'input'"></textarea>
+        <input type="submit" value="send" />
+        <span data-bind="text:charactersRemaining"></span> characters remaining
+    </form>
+    <img src="~/Content/Images/progress.gif" id="progress" style="display:none;" />
+</div>
+
+@section scripts{
+    <script src="~/Scripts/knockout-3.4.0.js"></script>
+    <script>
+        function ContactViewModel()
+        {
+            var self = this;
+            self.message = ko.observable('');
+            self.charactersRemaining = ko.computed(function () {
+                return 150 - self.message().length;
+            })
+        }
+        ko.applyBindings(new ContactViewModel());
+    </script>
+    <script>
+        $('#contactForm').submit(function () {
+            $('#progress').show();
+            $.post('', { message: $('#message').val() })
+                .done(function (response) {
+                    window.setTimeout(function () { $('#formSection').html(response); }, 2000);
+                });
+            return false;
+        });
+    </script>
+}
+
+@*
+        <div id="formSection">
+            <h3>@ViewBag.TheMessage</h3>
+            @using (Ajax.BeginForm(new AjaxOptions { HttpMethod = "post", InsertionMode = InsertionMode.Replace, UpdateTargetId = "formSection" }))
+            {
+                <textarea name="message"></textarea>
+                <input type="submit" value="send" />
+            }
+        </div>
+
+    @section scripts{
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    }
+*@
