--- a/AirlinesReservationSystem/Views/Home/Index.cshtml
+++ b/AirlinesReservationSystem/Views/Home/Index.cshtml
@@ -1,23 +1,6 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
-<!--
-<div class="row">
-    <div class="col-md-4">
-        <h2>Register</h2>
-        <p>
-            Open an account with us
-        </p>
-        <p>@Html.ActionLink("Register","Register","Account", null, new { @class="btn-btn-default" })</p>
-    </div>
-    <div class="col-md-4">
-        <h2>Login</h2>
-        <p>Access your existing account</p>
-        <p>@Html.ActionLink("Log in", "Login", "Account", null, new { @class = "btn-btn-default" })</p>
-    </div>
-</div>
--->
     
 <div class="row">
     <div class="col-md-6 margin-top-20">
@@ -26,11 +9,12 @@
         <a href="#" class="btn btn-primary btn-large btn-block"><span class="glyphicon glyphicon-question-sign"></span>Balance Inquiry</a>
     </div>
     <div class="col-md-6 margin-top-20">
-        <a href="#" class="btn btn-primary btn-large btn-block"><span class="glyphicon glyphicon-print"></span>Print Statement</a>
+        <a href="@Url.Action("Statement","CheckingAccount", new { id = ViewBag.CheckingAccountId })" class="btn btn-primary btn-large btn-block"><span class="glyphicon glyphicon-print"></span>Print Statement</a>
         <a href="#" class="btn btn-primary btn-large btn-block"><span class="glyphicon glyphicon-transfer"></span>Transfer Funds</a>
-        <a href="#" class="btn btn-primary btn-large btn-block"><span class="glyphicon glyphicon-circle-arrow-up"></span>Deposit</a>
+        <a href="@Url.Action("Deposit","Transaction", new { checkingAccountId = ViewBag.CheckingAccountId })" class="btn btn-primary btn-large btn-block"><span class="glyphicon glyphicon-circle-arrow-up"></span>Deposit</a>
     </div>
 </div>
+@ViewBag.Pin
 
 @section scripts{
     <script>var testing = true;</script>
