uplodaing updated changes

--- a/AirlinesReservationSystem/Views/Shared/_Layout.cshtml
+++ b/AirlinesReservationSystem/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     <div class="container body-content">
         <div class="row">
             <div class="col-md-12">
-                <img src=" ~/Content/Images/logo.png" class="img-responsive center-block" height="40" />
+                <img src=" ~/Content/Images/logo.png" class="img-responsive center-block" height="100" width="600" />
             </div>
         </div>
         @RenderBody()
