--- a/AirlinesReservationSystem/Views/Home/Index.cshtml
+++ b/AirlinesReservationSystem/Views/Home/Index.cshtml
@@ -13,6 +13,7 @@
         <a href="@Url.Action("Statement", "CheckingAccount", new { id = ViewBag.CheckingAccountId })" class="btn btn-primary btn-large btn-block"><span class="glyphicon glyphicon-print"></span> Print Statement</a>
         <a href="@Url.Action("Transfer", "Transaction", new { checkingAccountId = ViewBag.CheckingAccountId })" class="btn btn-primary btn-large btn-block"><span class="glyphicon glyphicon-transfer"></span> Transfer Funds</a>
         <a href="@Url.Action("Deposit", "Transaction", new {checkingAccountId = ViewBag.CheckingAccountId})" class="btn btn-primary btn-large btn-block"><span class="glyphicon glyphicon-circle-arrow-up"></span> Deposit</a>
+        <a href="@Url.Action("Add", "AircraftType", new {aircraftTypeCode = ViewBag.AircraftTypeCode})" class="btn btn-primary btn-large btn-block"><span class="glyphicon glyphicon-circle-arrow-up"></span> Aircraft Type</a>
     </div>
 </div>
 @ViewBag.Pin
